--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -36,6 +36,10 @@ _get_distribution_components() {
       clang-libraries|distribution)
         continue
         ;;
+      # trim static analyzer and other bits
+      bash-autocomplete|clang-format|clang-rename|scan-*)
+        continue
+        ;;
       clang|clang-*)
         ;;
       clang*|findAllSymbols)
