upgpkg: clang13 13.0.1-2: avoid shadowing libclang 14
clang 14 ships libclang.so.13 because the ABI remained stable, but this
is kinda annoying because clang13's copy can get loaded instead. :\

git-svn-id: file:///srv/repos/svn-packages/svn@449282 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=clang13
 pkgver=13.0.1
-pkgrel=1
+pkgrel=2
 pkgdesc="C language family frontend for LLVM 13"
 arch=('x86_64')
 url="https://clang.llvm.org/"
@@ -37,7 +37,12 @@ _get_distribution_components() {
         continue
         ;;
       # trim static analyzer and other bits
-      bash-autocomplete|clang-format|clang-rename|scan-*)
+      bash-autocomplete|clang-format|clang-rename|hmaptool|scan-*)
+        continue
+        ;;
+      # avoid shadowing libclang.so.13 from clang 14
+      # https://github.com/llvm/llvm-project/issues/53684#issuecomment-1162669770
+      libclang|c-index-test)
         continue
         ;;
       clang|clang-*)
