--- a/repos/staging-x86_64/PKGBUILD
+++ b/repos/staging-x86_64/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=clang13
 pkgver=13.0.1
-pkgrel=1
+pkgrel=2
 pkgdesc="C language family frontend for LLVM 13"
 arch=('x86_64')
 url="https://clang.llvm.org/"
@@ -37,7 +37,12 @@ _get_distribution_components() {
         continue
         ;;
       # trim static analyzer and other bits
-      bash-autocomplete|clang-format|clang-rename|scan-*)
+      bash-autocomplete|clang-format|clang-rename|hmaptool|scan-*)
+        continue
+        ;;
+      # avoid shadowing libclang.so.13 from clang 14
+      # https://github.com/llvm/llvm-project/issues/53684#issuecomment-1162669770
+      libclang|c-index-test)
         continue
         ;;
       clang|clang-*)
