upgpkg: llvm13 13.0.1-2: remove ld.so.conf.d config
Also move libLLVM-13*.so to /usr/lib/.

git-svn-id: file:///srv/repos/svn-packages/svn@449339 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=('llvm13' 'llvm13-libs')
 pkgver=13.0.1
-pkgrel=1
+pkgrel=2
 arch=('x86_64')
 url="https://llvm.org/"
 license=('custom:Apache 2.0 with LLVM Exception')
@@ -83,9 +83,8 @@ package_llvm13() {
 
   DESTDIR="$pkgdir" ninja install
 
-  # The runtime libraries go into llvm13-libs
-  mv -f "$pkgdir"/usr/lib/llvm13/lib/lib{LLVM,LTO,Remarks}*.so* "$srcdir"
-  mv -f "$pkgdir"/usr/lib/llvm13/lib/LLVMgold.so "$srcdir"
+  # The runtime library goes into llvm13-libs
+  mv -f "$pkgdir"/usr/lib/llvm13/lib/libLLVM-{13,$pkgver}.so "$srcdir/"
 
   install -Dm644 ../LICENSE.TXT "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
 }
@@ -95,13 +94,9 @@ package_llvm13-libs() {
   depends=('gcc-libs' 'zlib' 'libffi' 'libedit' 'ncurses' 'libxml2')
 
   install -d "$pkgdir/usr/lib/llvm13/lib"
-  cp -P \
-    "$srcdir"/lib{LLVM,LTO,Remarks}*.so* \
-    "$srcdir"/LLVMgold.so \
-    "$pkgdir/usr/lib/llvm13/lib/"
-
-  install -d "$pkgdir/etc/ld.so.conf.d"
-  echo /usr/lib/llvm13/lib >"$pkgdir/etc/ld.so.conf.d/llvm13.conf"
+  cp -P "$srcdir"/libLLVM-{13,$pkgver}.so "$pkgdir/usr/lib/"
+  ln -s ../../libLLVM-13.so "$pkgdir/usr/lib/llvm13/lib/libLLVM-13.so"
+  ln -s ../../libLLVM-13.so "$pkgdir/usr/lib/llvm13/lib/libLLVM-$pkgver.so"
 
   install -Dm644 "$srcdir/llvm-$pkgver.src/LICENSE.TXT" \
     "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
