upgpkg: clang13 13.0.1-3: move libclang-cpp.so.13 to /usr/lib/
git-svn-id: file:///srv/repos/svn-packages/svn@449341 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=clang13
 pkgver=13.0.1
-pkgrel=2
+pkgrel=3
 pkgdesc="C language family frontend for LLVM 13"
 arch=('x86_64')
 url="https://clang.llvm.org/"
@@ -98,6 +98,9 @@ package() {
 
   DESTDIR="$pkgdir" ninja install-distribution
   install -Dm644 ../LICENSE.TXT "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
+
+  mv "$pkgdir"/usr/lib/{llvm13/lib/,}libclang-cpp.so.13
+  ln -s ../../libclang-cpp.so.13 "$pkgdir/usr/lib/llvm13/lib/libclang-cpp.so.13"
 }
 
 # vim:set ts=2 sw=2 et:
