--- a/repos/staging-x86_64/PKGBUILD
+++ b/repos/staging-x86_64/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=clang13
 pkgver=13.0.1
-pkgrel=2
+pkgrel=3
 pkgdesc="C language family frontend for LLVM 13"
 arch=('x86_64')
 url="https://clang.llvm.org/"
@@ -98,6 +98,9 @@ package() {
 
   DESTDIR="$pkgdir" ninja install-distribution
   install -Dm644 ../LICENSE.TXT "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
+
+  mv "$pkgdir"/usr/lib/{llvm13/lib/,}libclang-cpp.so.13
+  ln -s ../../libclang-cpp.so.13 "$pkgdir/usr/lib/llvm13/lib/libclang-cpp.so.13"
 }
 
 # vim:set ts=2 sw=2 et:
