--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Giovanni Scafora <giovanni@archlinux.org>
 
 pkgname=rhythmbox
-pkgver=3.4.5
+pkgver=3.4.6
 pkgrel=1
 pkgdesc="Music playback and management application"
 arch=(x86_64)
@@ -27,7 +27,7 @@ optdepends=('gst-plugins-ugly: Extra media codecs'
             'gvfs-mtp: Portable Players - Android plugin'
             'zeitgeist: Zeitgeist logging plugin')
 options=(debug)
-_commit=015ce7418d2bc6486f51f8fc0c21a4514fcbc50a  # tags/v3.4.5^0
+_commit=1b14819fc3937d9f03edd8dac092228cb4589240  # tags/v3.4.6^0
 source=("git+https://gitlab.gnome.org/GNOME/rhythmbox.git#commit=$_commit")
 sha512sums=('SKIP')
 
@@ -44,9 +44,7 @@ prepare() {
 }
 
 build() {
-  arch-meson $pkgname build \
-    -D gtk_doc=true \
-    -D tests=true
+  arch-meson $pkgname build -D gtk_doc=true
   meson compile -C build
 }
 
