Remove unused LLVM signing key
Hans' key has not been used to sign a release since LLVM 11.0.0.

git-svn-id: file:///srv/repos/svn-packages/svn@449739 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -22,8 +22,7 @@ sha256sums=('666af745e8bf7b680533b4d18b7a31dc7cab575b1e6e4d261922bbafd9644cfb'
             'SKIP'
             'e206dbf1bbe058a113bffe189386ded99a160b2443ee1e2cd41ff810f78551ba'
             'SKIP')
-validpgpkeys+=('B6C8F98282B944E3B0D5C2530FC3042E345AD05D') # Hans Wennborg <hans@chromium.org>
-validpgpkeys+=('474E22316ABF4785A88C6E8EA2C794A986419D8A') # Tom Stellard <tstellar@redhat.com>
+validpgpkeys=('474E22316ABF4785A88C6E8EA2C794A986419D8A') # Tom Stellard <tstellar@redhat.com>
 
 prepare() {
   # https://bugs.llvm.org/show_bug.cgi?id=49228
