--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=('llvm13' 'llvm13-libs')
 pkgver=13.0.1
-pkgrel=2
+pkgrel=3
 arch=('x86_64')
 url="https://llvm.org/"
 license=('custom:Apache 2.0 with LLVM Exception')
@@ -82,8 +82,9 @@ package_llvm13() {
 
   DESTDIR="$pkgdir" ninja install
 
-  # The runtime library goes into llvm13-libs
+  # The runtime libraries go into llvm13-libs
   mv -f "$pkgdir"/usr/lib/llvm13/lib/libLLVM-{13,$pkgver}.so "$srcdir/"
+  mv -f "$pkgdir"/usr/lib/llvm13/lib/LLVMgold.so "$srcdir/"
 
   install -Dm644 ../LICENSE.TXT "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
 }
@@ -96,6 +97,7 @@ package_llvm13-libs() {
   cp -P "$srcdir"/libLLVM-{13,$pkgver}.so "$pkgdir/usr/lib/"
   ln -s ../../libLLVM-13.so "$pkgdir/usr/lib/llvm13/lib/libLLVM-13.so"
   ln -s ../../libLLVM-13.so "$pkgdir/usr/lib/llvm13/lib/libLLVM-$pkgver.so"
+  cp -P "$srcdir"/LLVMgold.so "$pkgdir/usr/lib/llvm13/lib/"
 
   install -Dm644 "$srcdir/llvm-$pkgver.src/LICENSE.TXT" \
     "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
