archrelease: copy trunk to extra-x86_64
git-svn-id: file:///srv/repos/svn-packages/svn@449853 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/repos/extra-x86_64/PKGBUILD
+++ b/repos/extra-x86_64/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=('llvm13' 'llvm13-libs')
 pkgver=13.0.1
-pkgrel=2
+pkgrel=3
 arch=('x86_64')
 url="https://llvm.org/"
 license=('custom:Apache 2.0 with LLVM Exception')
@@ -24,8 +24,7 @@ sha256sums=('ec6b80d82c384acad2dc192903a6cf2cdbaffb889b84bfb98da9d71e630fc834'
             'f7d69f84241416398fdb3df8bb44f9fae3c49d89889c7ffa3b37aa2e9d78f708'
             '34cc0d79a30599cb2287b47b4e9a1a5bf03d57a1f8bb35be3fe976ffc4a604f6'
             '8642da2d556092e4284873ba6ddc6c9a67841f42cc16f923bcd523e4b304a3ff')
-validpgpkeys+=('B6C8F98282B944E3B0D5C2530FC3042E345AD05D') # Hans Wennborg <hans@chromium.org>
-validpgpkeys+=('474E22316ABF4785A88C6E8EA2C794A986419D8A') # Tom Stellard <tstellar@redhat.com>
+validpgpkeys=('474E22316ABF4785A88C6E8EA2C794A986419D8A') # Tom Stellard <tstellar@redhat.com>
 
 prepare() {
   cd llvm-$pkgver.src
@@ -83,8 +82,9 @@ package_llvm13() {
 
   DESTDIR="$pkgdir" ninja install
 
-  # The runtime library goes into llvm13-libs
+  # The runtime libraries go into llvm13-libs
   mv -f "$pkgdir"/usr/lib/llvm13/lib/libLLVM-{13,$pkgver}.so "$srcdir/"
+  mv -f "$pkgdir"/usr/lib/llvm13/lib/LLVMgold.so "$srcdir/"
 
   install -Dm644 ../LICENSE.TXT "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
 }
@@ -97,6 +97,7 @@ package_llvm13-libs() {
   cp -P "$srcdir"/libLLVM-{13,$pkgver}.so "$pkgdir/usr/lib/"
   ln -s ../../libLLVM-13.so "$pkgdir/usr/lib/llvm13/lib/libLLVM-13.so"
   ln -s ../../libLLVM-13.so "$pkgdir/usr/lib/llvm13/lib/libLLVM-$pkgver.so"
+  cp -P "$srcdir"/LLVMgold.so "$pkgdir/usr/lib/llvm13/lib/"
 
   install -Dm644 "$srcdir/llvm-$pkgver.src/LICENSE.TXT" \
     "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
